# docs/openapi/gen/openapi.yaml
@@ -133,7 +133,6 @@ components:
         - id
         - path
         - name
-        - title
         - body
         - created_at
         - updated_at
@@ -148,9 +147,6 @@ components:
         name:
           type: string
           example: page
-        title:
-          type: string
-          example: title
         body:
           type: string
           example: wikiページの内容
@@ -170,7 +166,6 @@ components:
       required:
         - parentID
         - name
-        - title
         - body
         - creator
       properties:
@@ -180,9 +175,6 @@ components:
         name:
           type: string
           example: page
-        title:
-          type: string
-          example: title
         body:
           type: string
           example: wikiページの内容
@@ -193,24 +185,16 @@ components:
       type: object
       required:
         - id
-        - parentID
         - name
-        - title
         - body
         - creator
       properties:
         id:
           type: integer
           example: 1
-        parentID:
-          type: integer
-          example: 1
         name:
           type: string
           example: page
-        title:
-          type: string
-          example: title
         body:
           type: string
           example: wikiページの内容
